src/pages/servers-page/ServersPage.css
/* region Server dashboard styles */

.server-dashboard {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 10px;
    z-index: -1;
}

.server-dashboard .server-info {
    width: 100%;
    max-width: 1300px;
}

.server-dashboard .server-info-header {
    text-transform: capitalize;
}

.server-dashboard .server-info-body {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.server-dashboard .server-console-container {
    flex-basis: 85%;
    max-width: 85%;
    display: flex;
    flex-direction: column;
    height: 60vh;
}

.server-dashboard .server-console-container .server-console {
    height: calc(100% - 50px);
    width: 100%;
    counter-reset: lineNum;
}

.server-console-input {
    padding: 5px 0 5px 0;
    display: flex;
    flex-direction: row;
    gap: 5px;
}

.server-dashboard .server-console .server-console-line {
    font-size: 12px;
    counter-increment: lineNum;
    position: relative;
    padding-left: 4rem;
    overflow: visible;
    min-height: 12px;
    margin-bottom: 0;
}

.server-dashboard .server-console .server-console-line::before {
    color: violet;
    left: 0;
    width: 4rem;
    height: 1rem;
    position: absolute;
    content: counter(lineNum);
}

.server-dashboard .server-console .server-console-line:last-child {
    padding-bottom: 1rem;
}

.server-dashboard .server-controls {
    padding-left: 15px;
    flex-basis: 15%;
    height: 100%;
    display: flex;
    flex-direction: column;
    gap: 5px;
}

@media (max-width: 900px) {
    .server-dashboard .server-console-container {
        max-width: 100%;
    }
}

/* endregion */

/* region Server grid styles */

.servers-grid {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.servers-grid .server {
    width: 200px;
    height: 200px;
    margin: 10px;
    padding: 5px;
    display: flex;
    text-transform: capitalize;
    text-decoration: none;
    text-align: center;
    flex-direction: column;
    align-items: center;
    border-radius: 10%;
	box-shadow: 0 0 3px #888888;
    background-color: white;
    color: black;
    cursor: pointer;
    transition: 0.3s;
}

.servers-grid .server:hover {
	box-shadow: 0 0 8px #888888;
}

.servers-grid .server .server-name {
    color: inherit;
    font-weight: bolder;
    border-bottom: 1px solid rgba(80, 80, 80, 0.25);
    width: 100%;
}

.servers-grid .server .controls {
    flex-basis: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 2px;
}

.servers-grid .server .controls > * {
    width: 100%;
}

.servers-grid .server .server-status {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin: 5px;
    border-radius: 10%;
    font-weight: bolder;
}

.servers-grid .server .server-status.stopped {
    color: #dc3545;
}

.servers-grid .server .server-status.started {
    color: #28a745;
}

.servers-grid .server .server-status.updating {
    color: #ffc107;
}

.servers-grid .server.new-server .plus {
    font-size: 60px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

/* endregion */

.mode-display {
    text-align: center;
    display: grid;
    grid-template-columns: 20% auto 20%;
    grid-gap: 2px;
}

.modes-table {
    width: 100%;
    text-align: center;
    margin: 10px 0 10px 0;
}

.modes-table tr {
    border-top: 1px solid rgba(0.5, 0.5, 0.5, 0.25);
}

